--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.69.4",
     "react-native-ble-manager": "^8.4.3",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.15.0",
     "react-native-svg": "^12.1.1"
