--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "prettier --config \".prettierrc.js\" --ignore-path \".prettierignore\" -l  --write \"**/*.{json,md,scss,yaml,yml,js,jsx,tsx,ts}\""
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "native-base": "^3.4.13",
