--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -40,5 +40,5 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 newArchEnabled=false
 
 # Use this property to enable or disable the Hermes JS engine.
-43	# If set to false, you will be using JSC instead.
-44	hermesEnabled=true
+# If set to false, you will be using JSC instead.
+hermesEnabled=true
