--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@react-navigation/stack": "^6.3.11",
     "native-base": "^3.4.25",
     "react": "18.2.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.71.0",
+    "react-native": "0.71.3",
     "react-native-ble-manager": "^8.6.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-permissions": "^3.6.1",
@@ -26,24 +25,23 @@
     "react-native-svg": "^13.7.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.69.3",
+    "@types/jest": "^29.2.1",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
+    "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.70.3",
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "^0.73.7",
     "prettier": "^2.7.1",
-    "react-test-renderer": "18.0.0",
-    "typescript": "^4.4.4"
+    "react-test-renderer": "18.2.0",
+    "typescript": "4.8.4"
   },
   "jest": {
     "preset": "react-native",
