--- a/ios/ConeRGBCompanion/Info.plist
+++ b/ios/ConeRGBCompanion/Info.plist
@@ -53,5 +53,9 @@
 	<string>Allows the ConeRGB Companion app to connect to your RGB controller.</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>Allows the ConeRGB Companion app to connect to your RGB controller.</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Entypo.ttf</string>
+	</array>
 </dict>
 </plist>
