--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-svg": "^13.8.0"
+    "react-native-svg": "^13.8.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -30,6 +31,7 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@tsconfig/react-native": "^2.0.2",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
